13_cert_manager/deploy1.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend1
spec:
  ports:
    - port: 80
      targetPort: 4000
  selector:
    app: backend1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1
spec:
  selector:
    matchLabels:
      app: backend1
  replicas: 2
  template:
    metadata:
      labels:
        app: backend1
    spec:
      containers:
        - name: backend1
          image: deependraparmar1/backend:latest
