13_cert_manager/deploy2.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend2
spec:
  ports:
    - port: 80
      targetPort: 4000
  selector:
    app: backend2

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2
spec:
  selector:
    matchLabels:
      app: backend2
  replicas: 2
  template:
    metadata:
      labels:
        app: backend2
    spec:
      containers:
        - name: backend2
          image: deependraparmar1/backend:latest
