13_cert_manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - backend1.local
        - backend2.local
      secretName: letsencrypt-staging
  rules:
    - host: backend1.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: backend1
                port:
                  number: 80
    - host: backend2.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: backend2
                port:
                  number: 80
